themes/main/src/sass/nacional.scss
@import '_includes/colors';
@import '_includes/query';
@import '_includes/mixins';
@import '_includes/constants';

#home {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  max-width: 2 * $COLUMN-WIDTH;
  padding-left: 10px;
  padding-right: 10px;
  @include margin-site($HEADER-HEIGHT-CONTRACTED);
  @include get-font(NACIONAL);

  @include media-query (THREE){
    flex-wrap: nowrap;
    max-width: 3 * $COLUMN-WIDTH;
    padding-left: 0;
    padding-right: 0;
    @include margin-site($HEADER-HEIGHT-DESKTOP + $MENU-HEIGHT-DESKTOP);
  }

  @include media-query (FOUR){
    max-width: 4 * $COLUMN-WIDTH;
  }

  @include media-query(FIVE) {
    max-width: 5 * $COLUMN-WIDTH;
  }

  a {
    color: $link;

    &:hover {
      color: $link-hover;
    }
  }
}

#home {
  #featured-1 {
    order: -10;
  }

  #featured-2 {
    order: -9;
  }

  #featured-3 {
    order: -8;

    @include media-query(FOUR){
      order: -7;
    }

    @include media-query(FIVE){
      order: -8;
    }
  }

  #featured-text-container {
    display: flex;
    flex-wrap: wrap;
    order: -7;

    @include media-query(FOUR){
      width: 2 * $COLUMN-WIDTH;
      order: -8;
    }

    @include media-query(FIVE){
      width: 4 * $COLUMN-WIDTH;
      order: -7;
    }
  }

  #videos {
    order: -6;
  }

  #images {
    order: -5;

    @include media-query(FOUR){
      order: -4;
    }

    @include media-query(FIVE){
      order: -5;
    }
  }

  #featured-7 {
    order: -4;

    @include media-query(FOUR){
      order: -5;
    }

    @include media-query(FIVE){
      order: -4;
    }
  }

  #featured-8 {
    order: -3;
  }
}

.spacing {
  margin-bottom: $VERTICAL-SPACE;
}

#home .main {
  display: flex;
  flex-wrap: wrap;
  width: 100%;

  @include media-query (THREE){
    width: 2 * $COLUMN-WIDTH;
    flex-flow: row wrap;
  }
  @include media-query (FOUR){
    width: 3 * $COLUMN-WIDTH;
  }
  @include media-query (FIVE){
    width: 4 * $COLUMN-WIDTH;
  }

  .divisor + .divisor {
    border-top: 1px solid $vertical-bar;
    padding-top: $VERTICAL-SPACE;

    @include media-query(THREE){
      border-top: 0;
      padding-top: 0;
    }
  }

  .description{
    margin-top: 10px;
  }

  .radar, .columns, .last-news {
      width: 100%;
      @include media-query(THREE) {
        display: none;
      }
  }
}

#home .featured-big-picture {
  width: 100%;
  @include picture-with-caption();
  @include image-rounded-responsive(300px);

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include space-between-columns();
  }
}

#home .featured-small-picture {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  @include image-rounded(150px, 150px);

  @include media-query(THREE) {
    width: $COLUMN-WIDTH;
    @include image-rounded(220px, 150px);
    @include space-between-columns();
  }

  .title {
    display: inline-block;
    position: absolute;
    width: 50%;
    max-width: 270px;
    padding-right: 10px;
    padding-left: 10px;

    @include media-query(THREE) {
      position: relative;
      width: 100%;
      border-left: 3px solid $vertical-bar;
      padding-left: 10px;
      margin-top: $VERTICAL-SPACE;
    }
  }

  figure {
    display: inline-block;
  }
}

#home .featured-text-and-title{
  width: 100%;

  @include media-query(THREE) {
    width: 2 * $COLUMN-WIDTH;
    @include space-between-columns();
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }

  .description {
    padding-left: 13px;
    margin-top: 5px;
  }
}

#home .box-container {

  @include media-query(THREE){
    width: $COLUMN-WIDTH;
    @include space-between-columns();
  }

  .featured-text-box {
    background-color: $box-background;
    border-top: 3px solid $box-boder;
    padding: 10px;
  }
}

#home .article-footer {
  width: 50%;
  @include image-rounded(100%, 150px);

  @include media-query (THREE){
    width: $COLUMN-WIDTH;
    @include space-between-columns();
  }

  .title {
    border-left: 3px solid $vertical-bar;
    padding-left: 10px;
    margin-top: $VERTICAL-SPACE;
  }

  .hat{
    @include section-name();
  }

  img{
    border-radius: 5px;
    width: 100%;
  }
}

.article-footer + .article-footer {
  padding-left: 10px;
}

#home .gallery-images .gallery-mobile-smaller {
  display: inline-block;
  @include media-query(MOBILE_TWO){
    display: none;
  }
}

#home .gallery-images .gallery-mobile {
  display: none;
  @include media-query(MOBILE_TWO){
    display: inline-block;
  }
  @include media-query(TWO){
    display: none;
  }
}

#home .gallery-images .gallery-desktop {
  display: none;
  @include media-query(TWO){
    display: inline-block;
  }
}

#home .gallery-videos {
  iframe, img, a{
    height: 337px;
    width: 100%;
  }
}

#home .gallery-images, .gallery-videos{
  width: 2 * $COLUMN_WIDTH;
  height: 100%;
  @include space-between-columns();

  .section-name {
    @include section-name();
  }
}

#home .photo-caption {
  @include picture-with-caption();
  @include image-rounded-responsive(300px);
  width: 100%;
  padding-top: $VERTICAL-SPACE;

  @include media-query(THREE) {
    @include space-between-columns();
  }

  @include media-query(FOUR) {
    @include image-rounded-responsive(450px);
  }

  @include media-query(FIVE){
    width: 2 * $COLUMN-WIDTH;
    padding-top: 35px;
  }
}

#home .most-read {
  width: 100%;
  @include space-between-columns();

  .section-name {
    @include section-name();
  }

  ol {
    counter-reset: li;
    margin: 15px 0 0 35px;
  }

  ol > li {
    list-style: none;
    line-height: 1.2em;
    margin-bottom: 7px;
  }

  ol > li:before{
    content: counter(li) ".";
    counter-increment: li;
    margin: 0 10px 0 -35px;
    color: $red-base;
  }
}

#home .sidebar {
  display: none;

  @include media-query(THREE) {
    display: inline-block;
    width: $COLUMN-WIDTH;
    @include space-between-columns();
  }

  section + section {
    margin-top: $VERTICAL-SPACE;
  }
}

#home .radar {
  width: $COLUMN-WIDTH;
  margin-top: $VERTICAL-SPACE;
  img {
    width: 100%;
  }
  @include media-query(THREE) {
    margin-top: 0;
  }
}

#home .columns {
  .section-name {
    @include section-name();
  }

  img{
    border-radius: 50%;
    height: 80px;
    max-width: 80px;
    align-self: center;

    @include media-query(THREE) {
      height: 60px;
      max-width: 60px;
    }
  }

  .title {
    color: $title-color;
    margin-top: 5px;
  }

  .columnist + .columnist {
    margin-top: 15px;
  }

  .column {
    margin-left: 10px;
  }

  .columnist {
    display: flex;
    margin-top: 15px;

    figure {
      display: flex;
      flex: 0 0 90px;
      justify-content: center;

      @include media-query(THREE) {
        flex: 0 0 70px;
      }
    }
  }
}


#home .last-news {
  @include space-between-columns();

  .section-name {
    @include section-name();
  }

  ol > li {
    list-style: none;
    line-height: 1.2em;
    padding : 5px 0 5px 8px;
    border-left: 3px solid $vertical-bar;
    margin-top: 10px;
  }
}

